# Calculator

./: CMakeLists.txt  LICENSE  README.md  calc_input.txt  calc_output.txt  main.c
res/: calc_input.txt  input_recent  output_recent  ui.h
src/: evaluator.c  evaluator.h  input.c  input.h  main.c  operations.c  operations.h  output.c  output.h  parenthases_parser.c  parenthases_parser.h  parser.c  parser.h  prioritization.c  structsAndEnums.h  ui.c  ui.h  utils.c  utils.h
